--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "vee-validate": "^3.4.13",
     "vue": "^2.6.11",
+    "vue-feather-icons": "^5.1.0",
     "vue-router": "^3.5.2",
     "vue-star-rating": "^1.7.0",
     "vuex": "^3.6.2"
